# solana-stablecoin-standard-1

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  SUPERTEAM_SUBMISSION.md  docker-compose.yml
cli/src/: index.ts
programs/sss/: Cargo.toml
programs/sss/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sss/src/instructions/: burn.rs  compliance.rs  freeze.rs  hook.rs  initialize.rs  mint.rs  mod.rs  roles.rs  transfer.rs
scripts/: deploy-devnet.sh
sdk/: package.json
sdk/src/: index.ts
tests/: sss.ts
